// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SCREEN_TYPE_CHECKBOX 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="option"
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#d3d3d3",
            "borderRadius": 8,
            "borderWidth": 2,
            "marginBottom": 16,
            "paddingHorizontal": 20,
            "paddingVertical": 20,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "#999999",
                "borderRadius": 2,
                "borderWidth": 2,
                "height": 24,
                "justifyContent": "center",
                "marginRight": 24,
                "marginTop": 2,
                "width": 24,
              },
              undefined,
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2e2e2e",
                "fontFamily": "IBMPlexSans",
                "fontSize": 17,
                "lineHeight": 28,
              },
              Object {
                "writingDirection": "ltr",
              },
              Object {
                "color": "#2e2e2e",
                "flex": 1,
                "flexWrap": "wrap",
                "fontFamily": "IBMPlexSans-Bold",
                "fontSize": 19,
                "fontWeight": "500",
                "lineHeight": 28,
              },
            ]
          }
          testID="label"
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SCREEN_TYPE_RADIO 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="option"
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#d3d3d3",
            "borderRadius": 8,
            "borderWidth": 2,
            "marginBottom": 16,
            "paddingHorizontal": 20,
            "paddingVertical": 20,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "#999999",
                "borderRadius": 40,
                "borderWidth": 2,
                "height": 24,
                "justifyContent": "center",
                "marginRight": 24,
                "marginTop": 2,
                "width": 24,
              },
              undefined,
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2e2e2e",
                "fontFamily": "IBMPlexSans",
                "fontSize": 17,
                "lineHeight": 28,
              },
              Object {
                "writingDirection": "ltr",
              },
              Object {
                "color": "#2e2e2e",
                "flex": 1,
                "flexWrap": "wrap",
                "fontFamily": "IBMPlexSans-Bold",
                "fontSize": 19,
                "fontWeight": "500",
                "lineHeight": 28,
              },
            ]
          }
          testID="label"
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;
